Update * Debug broken style * Ready to split branch

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <div class="gb-container">
         <div class="left-content">
             <div class="global-links">
-                <img class="page-logo" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=acd46984e03e7178ffec46392c04f80a&oe=5CFC87A1" />
-                <span class="page-title-left">The New York Times<span class="authorized"></span></span>
-                <div class="facebook-id">@nytimes</div>
+                <img class="page-logo" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                <span class="page-title-left">HuffPost<span class="authorized"></span></span>
+                <div class="facebook-id">@HuffPost</div>
                 <div class="left-menus">
                     <p>home</p>
                     <p>contents</p>
@@ -203,8 +203,8 @@
                 <div class="recentcontainer">
                     <div class="newpostheader">
                         <a href="javascript:void(0)">
-                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=acd46984e03e7178ffec46392c04f80a&oe=5CFC87A1" />
-                            <span class="name">The New York Times</span>
+                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                            <span class="name">HuffPost</span>
                         </a>
                         <p>
                             <a class="date" href="javascript:void(0)">44 mins</a>
@@ -228,12 +228,12 @@
                                 Trump's Supreme Court nomination.
                             </p>
                             <div class="news-link-box">
-                                <div class="photo-section photo1"></div>
-                                <div class="news-headline-section">
+                                <div class="photo-section photo1 click-ad"></div>
+                                <div class="news-headline-section click-ad">
                                     <div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
                                     <div class="phrase">Even before President Trump’s new Supreme Court nominee is
                                         announced, a fight over the choice is raging on social ...</div>
-                                    <div class="news-link">NYTIMES.COM</div>
+                                    <div class="news-link">HuffPost.COM</div>
                                 </div>
                             </div>
                         </div>
@@ -327,8 +327,8 @@
                 <div class="recentcontainer">
                     <div class="newpostheader">
                         <a href="javascript:void(0)">
-                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=acd46984e03e7178ffec46392c04f80a&oe=5CFC87A1" />
-                            <span class="name">The New York Times posted 3 new photos</span>
+                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                            <span class="name">HuffPost posted 3 new photos</span>
                         </a>
                         <p>
                             <a class="date" href="javascript:void(0)">44 mins</a>
@@ -352,10 +352,10 @@
                                 period of reconstruction. For various reasons, however, hundreds of buildings were
                                 never finished.
                                 <br> The art collective Alterazioni Video crisscrossed Italy to document them.
-                                https://nyti.ms/2tTHT4P
+                                https://hffp.st/2tTHT4P
                                 <br> Photos: Alterazioni Video
                             </p>
-                            <div class="clearfix photo-post-box">
+                            <div class="clearfix photo-post-box click-ad">
                                 <div class="photo vertical">
                                     <img src="https://static01.nyt.com/images/2018/06/14/t-magazine/14tmag-sicily-slide-WZE4/14tmag-sicily-slide-WZE4-superJumbo.jpg?quality=75&auto=webp&disable=upscale">
                                 </div>
@@ -457,8 +457,8 @@
                 <div class="recentcontainer">
                     <div class="newpostheader">
                         <a href="javascript:void(0)">
-                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/21271205_10151289835394999_3080933440031890323_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=acd46984e03e7178ffec46392c04f80a&oe=5CFC87A1" />
-                            <span class="name">The New York Times</span>
+                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                            <span class="name">HuffPost</span>
                         </a>
                         <p>
                             <a class="date" href="javascript:void(0)">44 mins</a>
@@ -482,12 +482,12 @@
                                 Trump's Supreme Court nomination.
                             </p>
                             <div class="news-link-box">
-                                <div class="photo-section photo1"></div>
-                                <div class="news-headline-section">
+                                <div class="photo-section photo1 click-ad"></div>
+                                <div class="news-headline-section click-ad">
                                     <div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
                                     <div class="phrase">Even before President Trump’s new Supreme Court nominee is
                                         announced, a fight over the choice is raging on social ...</div>
-                                    <div class="news-link">NYTIMES.COM</div>
+                                    <div class="news-link">HuffPost.COM</div>
                                 </div>
                             </div>
                         </div>
@@ -594,8 +594,10 @@
                 </div>
                 <div class="section-content">
                     <div class="pac">
-                        <div></div>
-                        <div class="letter">Newspapers in New York, New York</div>
+                        <div class="pics">
+                            <i class="fas fa-globe"></i>
+                        </div>
+                        <div class="letter">www.huffingtonpost.com</div>
                     </div>
                 </div>
                 <div class="section-content">
@@ -631,7 +633,7 @@
                         </div>
                         <div class="letters">
                             Answers in several hours
-                            <br> Contact The New York Times on Messenger
+                            <br> Contact HuffPost on Messenger
                         </div>
                     </div>
                     <div class="pac">
@@ -639,7 +641,7 @@
                             <i class="fas fa-globe"></i>
                         </div>
                         <div class="letters">
-                            nytimes.com/chat
+                            HuffPost.com/chat
                         </div>
                     </div>
                     <div class="pac">
@@ -669,7 +671,7 @@
                     <div class="pac2">
                         <img src="https://scontent.ficn2-1.fna.fbcdn.net/v/t1.0-1/p56x56/16425854_1201254269989402_7549909605920409701_n.jpg?_nc_cat=0&oh=0a5457ee1cbe6cc2b52c6d7c7b24fa95&oe=5BA895C0"
                             alt="">
-                        <span class="name">The New York Times...</span>
+                        <span class="name">HuffPost...</span>
                         <span class="fa-check-circle fas"></span>
                     </div>
                     <hr>
