--- a/map_static/index.html
+++ b/map_static/index.html
@@ -6,15 +6,21 @@
     <title>Fakebook page by Javier</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/modals.css">
-    <link rel="stylesheet" type="text/css" href="css/ad.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/modals.css">
+    <link rel="stylesheet" type="text/css" href="../css/ad.css">
 
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
     <!-- <script src="js/jquery-3.1.0.slim.min.js" type="text/javascript"></script> -->
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
+    <script src="../js/adList.js" type="text/javascript"></script>
+    <script src="selectAd.js" type="text/javascript"></script>
+    <script src="../js/index.js" type="text/javascript"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVPLLlJAQ679Frd0gu11khJ9mW02wsvWQ&callback=initMap"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if IE]>
