--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		<link rel="stylesheet" type="text/css" href="all-ie-only.css" />
 	<![endif]-->
 </head>
+<style>
+    .ad-container .inner {
+        width: 60%;
+    }
+</style>
 
 <body>
     <div class="pre-survey-wrapper">
