--- a/vid_only/index.html
+++ b/vid_only/index.html
@@ -26,7 +26,11 @@
 		<link rel="stylesheet" type="text/css" href="all-ie-only.css" />
 	<![endif]-->
 </head>
-
+<style>
+    .ad-container .inner {
+        width: 60%;
+    }
+</style>
 <body>
     <div class="pre-survey-wrapper">
         <div class="pre-inner">
