connection to huff

--- a/huff.html
+++ b/huff.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="https://cambria.assets.huffpost.com/images/favicon.hash-fb1b28072be499400b780ecc1d2fe86c.png">
     <title>Is January Really The Best Month To Book Cheap Flights?</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/huff.css">
