--- a/map_static/index.html
+++ b/map_static/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fakebook page by Javier</title>
+    <title>HuffPost - Home</title>
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/1000px-F_icon.svg.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -229,8 +230,8 @@
                                 Trump's Supreme Court nomination.
                             </p>
                             <div class="news-link-box">
-                                <div class="photo-section photo1 click-ad"></div>
-                                <div class="news-headline-section click-ad">
+                                <div class="photo-section photo1 wrong-ad"></div>
+                                <div class="news-headline-section wrong-ad">
                                     <div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
                                     <div class="phrase">Even before President Trump’s new Supreme Court nominee is
                                         announced, a fight over the choice is raging on social ...</div>
@@ -356,7 +357,7 @@
                                 https://hffp.st/2tTHT4P
                                 <br> Photos: Alterazioni Video
                             </p>
-                            <div class="clearfix photo-post-box click-ad">
+                            <div class="clearfix photo-post-box wrong-ad">
                                 <div class="photo vertical">
                                     <img src="https://static01.nyt.com/images/2018/06/14/t-magazine/14tmag-sicily-slide-WZE4/14tmag-sicily-slide-WZE4-superJumbo.jpg?quality=75&auto=webp&disable=upscale">
                                 </div>
@@ -483,8 +484,8 @@
                                 Trump's Supreme Court nomination.
                             </p>
                             <div class="news-link-box">
-                                <div class="photo-section photo1 click-ad"></div>
-                                <div class="news-headline-section click-ad">
+                                <div class="photo-section photo1 wrong-ad"></div>
+                                <div class="news-headline-section wrong-ad">
                                     <div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
                                     <div class="phrase">Even before President Trump’s new Supreme Court nominee is
                                         announced, a fight over the choice is raging on social ...</div>
@@ -527,6 +528,252 @@
                                     quo.
                                     <span class="thumbs-up"><i class="fas fa-heart"></i>4</span>
                                 </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
+                                    reprehenderit saepe quae, maxime est, numquam eius tenetur sequi quos doloremque
+                                    iusto minima labore delectus earum quas enim dolore tempora magnam.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+                                    voluptas nemo deleniti, omm mollitia.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="community-counter nav nav-tabs nav-justified">
+                        <li>
+                            <a href="javascript:void(0)" class="like-result">
+                                <i class="fa fa-thumbs-up"></i>
+                                <span>1</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-comment"></i>
+                                <span>3</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-share"></i>
+                                <span>4</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- <div class="commentpost">
+                        <div class="input-group">
+                            <a href="javascript:void(0)">
+          <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
+        </a>
+                            <textarea class="form-control comment-form" placeholder="Write a comment..."></textarea>
+                            <div class="input-group-btn">
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-smile-o"></i>
+          </a>
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-picture-o"></i>
+          </a>
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-gift"></i>
+          </a>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+                <div class="recentcontainer">
+                    <div class="newpostheader">
+                        <a href="javascript:void(0)">
+                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                            <span class="name">HuffPost</span>
+                        </a>
+                        <p>
+                            <a class="date" href="javascript:void(0)">44 mins</a>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-globe"></i>
+                            </a>
+                            <div class="rightsideofpost">
+                                <a class="follow" href="javascript:void(0)">
+                                    <i class="fa fa-star"></i>
+                                </a>
+                                <a class="personpostmenu" href="javascript:void(0)">
+                                    <i class="fa fa-caret-down"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="newpost">
+                        <div class="postcontent">
+                            <p>
+                                Here's what you should consider to make sure you're really getting the best travel deal.
+                            </p>
+                            <div class="news-link-box">
+                                <div class="photo-section the-photo click-ad"></div>
+                                <div class="news-headline-section click-ad">
+                                    <div class="headline">Is January Really The Best Month To Book Cheap Flights?</div>
+                                    <div class="phrase">Once January comes around, most people have hit post-holiday travel fatigue. But there are reports that claim January is the best...</div>
+                                    <div class="news-link">HuffPost.COM</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="newpostfooter nav nav-tabs nav-justified">
+                        <li>
+                            <a href="javascript:void(0)" class="like-click">
+                                <i class="fa fa-thumbs-up"></i>
+                                <span>Like</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)" title="Leave a comment" class="view-comment">
+                                <i class="fa fa-comment"></i>
+                                <span>Comment</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline" class="block-click">
+                                <i class="fa fa-share"></i>
+                                <span>Share</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="community-counter comment-slide">
+                        <div class="comment-contents">
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit.
+                                    <span class="thumbs-up"><i class="fas fa-thumbs-up"></i>43</span>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa,
+                                    quo.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
+                                    reprehenderit saepe quae, maxime est, numquam eius tenetur sequi quos doloremque
+                                    iusto minima labore delectus earum quas enim dolore tempora magnam.</div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+                                    voluptas nemo deleniti, omm mollitia.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="community-counter nav nav-tabs nav-justified">
+                        <li>
+                            <a href="javascript:void(0)" class="like-result">
+                                <i class="fa fa-thumbs-up"></i>
+                                <span>1</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-comment"></i>
+                                <span>3</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-share"></i>
+                                <span>4</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- <div class="commentpost">
+                        <div class="input-group">
+                            <a href="javascript:void(0)">
+          <img src="https://avatars1.githubusercontent.com/u/19923351?s=460&v=4" />
+        </a>
+                            <textarea class="form-control comment-form" placeholder="Write a comment..."></textarea>
+                            <div class="input-group-btn">
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-smile-o"></i>
+          </a>
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-picture-o"></i>
+          </a>
+                                <a class="btn btn-default" href="javascript:void(0)">
+            <i class="fa fa-gift"></i>
+          </a>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+                <div class="recentcontainer">
+                    <div class="newpostheader">
+                        <a href="javascript:void(0)">
+                            <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-1/p480x480/18767605_10155041388721130_3946638482509761445_n.png?_nc_cat=1&_nc_ht=scontent-sjc3-1.xx&oh=1dc6fa4eb28f880ae32dc21eb3f10ce6&oe=5CF377C0" />
+                            <span class="name">HuffPost</span>
+                        </a>
+                        <p>
+                            <a class="date" href="javascript:void(0)">44 mins</a>
+                            <a href="javascript:void(0)">
+                                <i class="fa fa-globe"></i>
+                            </a>
+                            <div class="rightsideofpost">
+                                <a class="follow" href="javascript:void(0)">
+                                    <i class="fa fa-star"></i>
+                                </a>
+                                <a class="personpostmenu" href="javascript:void(0)">
+                                    <i class="fa fa-caret-down"></i>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                    <div class="newpost">
+                        <div class="postcontent">
+                            <p>
+                                The new Facebook ad archive provides a look into how dark money is trying to influence
+                                Trump's Supreme Court nomination.
+                            </p>
+                            <div class="news-link-box">
+                                <div class="photo-section photo1 wrong-ad"></div>
+                                <div class="news-headline-section wrong-ad">
+                                    <div class="headline">Facebook Ads Offer Peek at Looming Supreme Court Fight</div>
+                                    <div class="phrase">Even before President Trump’s new Supreme Court nominee is
+                                        announced, a fight over the choice is raging on social ...</div>
+                                    <div class="news-link">HuffPost.COM</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="newpostfooter nav nav-tabs nav-justified">
+                        <li>
+                            <a href="javascript:void(0)" class="like-click">
+                                <i class="fa fa-thumbs-up"></i>
+                                <span>Like</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)" title="Leave a comment" class="view-comment">
+                                <i class="fa fa-comment"></i>
+                                <span>Comment</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)" title="Send this to friends or post it to your timeline" class="block-click">
+                                <i class="fa fa-share"></i>
+                                <span>Share</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="community-counter comment-slide">
+                        <div class="comment-contents">
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit.
+                                    <span class="thumbs-up"><i class="fas fa-thumbs-up"></i>43</span>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="pic"></div>
+                                <div class="comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa,
+                                    quo.</div>
                             </div>
                             <div class="comment-box">
                                 <div class="pic"></div>
