added block alert

--- a/huff.html
+++ b/huff.html
@@ -135,6 +135,10 @@
                 $('header').css('opacity', '0');
             }
         })
+
+        $("li").click(function(event) {
+            alert("It's blocked for experimental reason.")
+        });
     </script>
 </body>
 </html>
