--- a/ms/index.html
+++ b/ms/index.html
@@ -99,7 +99,15 @@
             <div class="timer"></div>
             <div class="ad-close">x</div>
             <div class="ad-content"></div>
-            <div id="map"></div>
+            <div class="map-wrapper">
+                <div class="map">
+                    <div id="map"></div>
+                </div>
+                <div class="addup">
+                    1 location within 2 miles <br>
+                    Today 11:00 - 21:00
+                </div>
+            </div>
         </div>
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
@@ -253,7 +261,7 @@
                             1.2K
                         </li>
                         <div class="right">
-                            1.3K Comments 1.1K Shares
+                            1.3K Comments 13 Shares
                         </div>
                     </ul>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
@@ -355,7 +363,7 @@
                             1.3K
                         </li>
                         <div class="right">
-                            1.6K Comments 2K Shares
+                            1.6K Comments 22 Shares
                         </div>
                     </ul>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
@@ -451,7 +459,7 @@
                             1.6K
                         </li>
                         <div class="right">
-                            3.4K Comments 3K Shares
+                            3.4K Comments 56 Shares
                         </div>
                     </ul>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
@@ -545,7 +553,7 @@
                             1.8K
                         </li>
                         <div class="right">
-                            3.1K Comments 6K Shares
+                            3.1K Comments 33 Shares
                         </div>
                     </ul>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
@@ -639,7 +647,7 @@
                             1.1K
                         </li>
                         <div class="right">
-                            2.1K Comments 2K Shares
+                            2.1K Comments 43 Shares
                         </div>
                     </ul>
                     <ul class="newpostfooter nav nav-tabs nav-justified">
